# Litmus

./: .gitignore  CMakeLists.txt  ONBOARDING.md  README.md  cmake.py
.github/workflows/: ci.yml
examples/: four_center.toml  t2c_geom.toml  t4c_eri.toml
src/: CMakeLists.txt  Makefile  Makefile.setup  litmus.cpp
src/algebra/: CMakeLists.txt  Fraction.cpp  Makefile  axes.hpp  components.hpp  container.hpp  factor.cpp  factor.hpp  four_center_integral.cpp  four_center_integral.hpp  four_center_integral_component.cpp  four_center_integral_component.hpp  fraction.cpp  fraction.hpp  generics.hpp  graph.hpp  integral.hpp  integral_component.hpp  one_center.cpp  one_center.hpp  one_center_component.cpp  one_center_component.hpp  operator.cpp  operator.hpp  operator_component.cpp  operator_component.hpp  recursion_expansion.hpp  recursion_group.hpp  recursion_term.hpp  repository.hpp  signature.hpp  spherical_harmonics.cpp  spherical_harmonics.hpp  tensor.cpp  tensor.hpp  tensor_component.cpp  tensor_component.hpp  two_center_pair.cpp  two_center_pair.hpp  two_center_pair_component.cpp  (+2 more)
src/general/: CMakeLists.txt  Makefile  angular_components.hpp  config.cpp  config.hpp  file_stream.cpp  file_stream.hpp  run_configuration.cpp  run_configuration.hpp  spherical_momentum.cpp  spherical_momentum.hpp  string_formater.cpp  string_formater.hpp
src/generators/: CMakeLists.txt  Makefile  c2c_auxilary_body.cpp  c2c_auxilary_body.hpp  c2c_body.cpp  c2c_body.hpp  cold_cpu_generator.cpp  cold_cpu_generator.hpp  cold_ovl_driver.cpp  cold_ovl_driver.hpp  eri_cpu_generator.cpp  eri_cpu_generator.hpp  file_stream.cpp  file_stream.hpp  g2c_body.cpp  g2c_body.hpp  g2c_cpu_generators.cpp  g2c_cpu_generators.hpp  g2c_decl.cpp  g2c_decl.hpp  g2c_docs.cpp  g2c_docs.hpp  g2c_prim_body.cpp  g2c_prim_body.hpp  g2c_prim_decl.cpp  g2c_prim_decl.hpp  g2c_prim_docs.cpp  g2c_prim_docs.hpp  h4c_cpu_generator.cpp  h4c_cpu_generator.hpp  spherical_momentum_generators.cpp  spherical_momentum_generators.hpp  t1c_body.cpp  t1c_body.hpp  t1c_cpu_generator.cpp  t1c_cpu_generator.hpp  t1c_decl.cpp  t1c_decl.hpp  t1c_docs.cpp  t1c_docs.hpp  (+168 more)
src/recursions/: CMakeLists.txt  Makefile  cold_eri_driver.cpp  cold_eri_driver.hpp  cold_kin_driver.cpp  cold_kin_driver.hpp  cold_npot_driver.cpp  cold_npot_driver.hpp  eri_driver.cpp  eri_driver.hpp  t2c_center_driver.cpp  t2c_center_driver.hpp  t2c_defs.hpp  t2c_dip_driver.cpp  t2c_dip_driver.hpp  t2c_el_field_driver.cpp  t2c_el_field_driver.hpp  t2c_eri_driver.cpp  t2c_eri_driver.hpp  t2c_hrr_driver.cpp  t2c_hrr_driver.hpp  t2c_kin_driver.cpp  t2c_kin_driver.hpp  t2c_linmom_driver.cpp  t2c_linmom_driver.hpp  t2c_loc_ecp_driver.cpp  t2c_loc_ecp_driver.hpp  t2c_mpol_driver.cpp  t2c_mpol_driver.hpp  t2c_npot_driver.cpp  t2c_npot_driver.hpp  t2c_npot_geom_driver.cpp  t2c_npot_geom_driver.hpp  t2c_ovl_driver.cpp  t2c_ovl_driver.hpp  t2c_proj_ecp_driver.cpp  t2c_proj_ecp_driver.hpp  t2c_three_center_overlap_driver.cpp  t2c_three_center_overlap_driver.hpp  t2c_trans_gen_driver.cpp  (+91 more)
tests/: CMakeLists.txt  litmus_tests.cpp
tests/algebra/: test_axes.cpp  test_axes.hpp  test_components.cpp  test_components.hpp  test_factor.cpp  test_factor.hpp  test_four_center_integral.cpp  test_four_center_integral.hpp  test_four_center_integral_component.cpp  test_four_center_integral_component.hpp  test_fraction.cpp  test_fraction.hpp  test_generics.cpp  test_generics.hpp  test_graph.cpp  test_graph.hpp  test_integral.cpp  test_integral.hpp  test_integral_component.cpp  test_integral_component.hpp  test_one_center.cpp  test_one_center_component.cpp  test_operator.cpp  test_operator.hpp  test_operator_component.cpp  test_operator_component.hpp  test_recursion_expansion.cpp  test_recursion_expansion.hpp  test_recursion_group.cpp  test_recursion_group.hpp  test_recursion_term.cpp  test_recursion_term.hpp  test_signature.cpp  test_signature.hpp  test_spherical_harmonics.cpp  test_tensor.cpp  test_tensor.hpp  test_tensor_component.cpp  test_tensor_component.hpp  test_two_center_pair.cpp  (+3 more)
tests/general/: test_config.cpp  test_file_stream.cpp  test_run_configuration.cpp  test_string_formater.cpp
tests/generators/: test_eri_cpu_generator.cpp  test_eri_cpu_generator.hpp  test_spherical_momentum_generators.cpp  test_two_center_emitters.cpp  test_two_center_hrr_emitter.cpp  test_two_center_vrr_emitter.cpp
tests/recursions/: test_eri_driver.cpp  test_eri_driver.hpp  test_t2c_center_driver.cpp  test_t2c_dip_driver.cpp  test_t2c_el_field_driver.cpp  test_t2c_eri_driver.cpp  test_t2c_hrr_driver.cpp  test_t2c_kin_driver.cpp  test_t2c_linmom_driver.cpp  test_t2c_loc_ecp_driver.cpp  test_t2c_npot_driver.cpp  test_t2c_ovl_driver.cpp  test_t2c_proj_ecp_driver.cpp  test_t2c_trans_gen_driver.cpp  test_t2c_trans_one_driver.cpp  test_t3c_geom_010_eri_driver.cpp  test_t3c_geom_100_eri_driver.cpp  test_t3c_hrr_eri_driver.cpp  test_t3c_ovl_driver.cpp  test_t3c_ovl_grad_driver.cpp  test_t3c_r2_driver.cpp  test_t3c_rr2_driver.cpp  test_t3c_vrr_eri_driver.cpp  test_t4c_center_driver.cpp  test_t4c_geom_01_hrr_eri_driver.cpp  test_t4c_geom_10_hrr_eri_driver.cpp  test_t4c_geom_11_hrr_eri_driver.cpp  test_t4c_geom_20_hrr_eri_driver.cpp  test_t4c_hrr_eri_driver.cpp  test_t4c_vrr_eri_driver.cpp  test_v2i_center_driver.cpp  test_v2i_dip_driver.cpp  test_v2i_el_field_driver.cpp  test_v2i_eri_driver.cpp  test_v2i_hrr_driver.cpp  test_v2i_kin_driver.cpp  test_v2i_linmom_driver.cpp  test_v2i_loc_ecp_driver.cpp  test_v2i_npot_driver.cpp  test_v2i_ovl_driver.cpp  (+16 more)
tests/tools/: setters.cpp  setters.hpp
